<resources>
    <string name="app_name">Event Creator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_reset">Reset</string>
    <string name="no_selection">Category</string>
    <string name="event_title">Event Title</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="submit">Submit</string>
    <string name="preview">Preview</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mehrasumit258_gmail_com">mehrasumit258@gmail.com</string>
    <string name="event_creator">Event Creator</string>
</resources>
