<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nicks.sumit.eventcreator.EventCreater">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <!-- add some padding -->
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/description"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        float:fletPadding="10dp">

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
        android:id="@+id/SearchableSpinner"
        android:layout_width="wrap_content"
        android:layout_below="@+id/description"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:ShowBorders="true"
        app:BordersSize="1dp"
        app:RevealEmptyText="Select Category"
        app:BoarderColor="@color/colorPrimary"
        app:SpinnerExpandHeight="250dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/select_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_below="@+id/SearchableSpinner"
        android:id="@+id/date_picker"/>
    <com.spark.submitbutton.SubmitButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/submit"
        android:layout_below="@+id/date_picker"
        android:id="@+id/submit"
        android:textColor="@color/gray"
        android:layout_centerHorizontal="true"
        app:sub_btn_background="@color/white"
        app:sub_btn_duration="3000"
        app:sub_btn_line_color="#78ca5f"
        app:sub_btn_ripple_color="#285f17"
        app:sub_btn_tick_color="@color/white" />

    <ImageView
        android:layout_below="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/preview"
        android:contentDescription="@string/preview" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/image_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_crop_original_white_24dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
